# fit_vutbr-bp2018

./: .gitignore  CMakeLists.txt  README.md  include.cmake  run_cmake.bat  run_cmake.sh
docs/presentation/: prezentace.tex
docs/thesis/: projekt-01-kapitoly-chapters.tex  projekt.tex
docs/thesis-plots/: .gitignore  requirements.txt  script.py  test.py
docs/thesis-plots/dot/: classes_render.dot  quadtree.dot  quadtree_lseg_struct.dot  quadtree_struct.dot
docs/thesis-plots/modules/: __init__.py  gradients.py  lines.py  scatters.py  simple.py  surfaces.py  utils.py  vectors.py
output/capture/: glue_images.sh
res/camera/: circle.csv  path.csv
res/shaders/: Default.shader  Geometry_Normals.shader  Geometry_Wireframe.shader  Normal.shader  Phong.shader  Phong_Buildings.shader  Phong_Terrain.shader  SkyBox.shader
src/proceduralCity/: Terrain.cpp  Terrain.h  bunny.c  bunny.h  main.cpp
src/proceduralCity/Application/: Application.cpp  Application.h  IRenderable.h  IRenderableArray.h  IRenderableBase.h  IRenderableCollection.h  IRenderableElementArray.h  Renderer.cpp  Renderer.h  ShaderLoader.cpp  ShaderLoader.h  ShaderManager.cpp  ShaderManager.h
src/proceduralCity/Infrastructure/: Building.cpp  Building.h  BuildingPart.cpp  BuildingPart.h  Parcel.cpp  Parcel.h  Street.cpp  Street.h  StreetMap.cpp  StreetMap.h  StreetNode.cpp  StreetNode.h  StreetZone.cpp  StreetZone.h
src/proceduralCity/Infrastructure/Structs/: BuildingPartIndex.h  BuildingPartVertex.h  ParcelIndex.h  ParcelVertex.h  StreetIntersection.h  StreetNarrowPair.h  StreetSegment.h  StreetSegmentIntersection.h  StreetVertex.h
src/proceduralCity/Terrain/: Builder.cpp  Builder.h  Chunk.cpp  Chunk.h  Fwd.h  Generator.cpp  Generator.h  HeightMap.cpp  HeightMap.h  Map.cpp  Map.h
src/proceduralCity/Terrain/Structs/: ChunkIndex.h  ChunkVertex.h
src/proceduralCity/Utils/: CSV.cpp  CSV.h  CameraPath.cpp  CameraPath.h  Curve.cpp  Curve.h  IHasRectBounds.cpp  IHasRectBounds.h  QuadTree.cpp  QuadTree.h  QuadTreeNode.cpp  QuadTreeNode.h  RectBounds.cpp  RectBounds.h  functions.h
tests/: CMakeLists.txt
tests/Infrastructure/: Street.cpp  StreetMap.cpp  StreetNode.cpp  StreetNode.cpp~RF3e6f0e99.TMP
